Closed
Bug 809055
Opened 13 years ago
Closed 9 years ago
Moving Firefox to background while playing a flash video in full screen mode and bring it back to view will freeze the app
Categories
(Firefox for Android Graveyard :: Plugins, defect)
Tracking
(firefox18 affected, firefox19 affected, firefox20 verified, firefox21 fixed, firefox22 fixed, firefox23+ wontfix, firefox24+ wontfix, relnote-firefox 23+, fennec-)
People
(Reporter: xti, Assigned: snorp)
References
Details
(Keywords: hang, regression)
Attachments
(1 file)
|
1.34 KB,
patch
|
blassey
:
review+
|
Details | Diff | Splinter Review |
Firefox 19.0a1 (2012-11-06)
Device: Galaxy S2
OS: Android 4.0.3
Steps to reproduce:
1. Go to youtube.com (desktop site)
2. Select a video from the list and play it in full screen mode
3. Tap on device Home button
4. Tap on Firefox shortcut to bring the app back into view
Expected result:
The app is not longer in full screen mode after step 4. Also no hangs or freezes will occur.
Actual result:
The app freezes after step 4.
Comment 1•13 years ago
|
||
Does this happen on any other video or just youtube? Is this Flash playback or html5 <video>?
tracking-fennec: --- → ?
Updated•13 years ago
|
Flags: needinfo?(nicolae.cristian)
| Reporter | ||
Comment 2•13 years ago
|
||
This is happening just for flash playback (on any website). It doesn't occur on any HTML5 video.
Flags: needinfo?(nicolae.cristian) needinfo?(nicolae.cristian) → needinfo+
| Reporter | ||
Comment 3•13 years ago
|
||
This issue occurs now on Aurora too, since bug 809005 was fixed.
--
Firefox 18.0a2 (2012-11-12)
Device: Galaxy S2
OS: Android 4.0.3
status-firefox18:
--- → affected
status-firefox19:
--- → affected
Summary: Moving Nightly to background while playing a video in full screen mode and bring it back to view will freeze the app → Moving Firefox to background while playing a video in full screen mode and bring it back to view will freeze the app
Updated•13 years ago
|
Summary: Moving Firefox to background while playing a video in full screen mode and bring it back to view will freeze the app → Moving Firefox to background while playing a flash video in full screen mode and bring it back to view will freeze the app
Updated•13 years ago
|
Assignee: nobody → snorp
tracking-fennec: ? → 18+
| Assignee | ||
Comment 5•13 years ago
|
||
Haven't really looked at this closely yet, but if I'd guess it's probably caused by Flash holding a lock while we are blocked in scheduleResumeComposition(), similar to other deadlocks.
Flags: needinfo?(snorp)
| Assignee | ||
Comment 6•13 years ago
|
||
I've confirmed that this is caused by the thing I described above (though it's pausing composition, not resuming). Brad and I discussed a possible solution that takes the gecko main loop out of the composition pause process. Basically call nsWindow::SchedulePauseComposition directly from the UI thread.
| Assignee | ||
Comment 7•13 years ago
|
||
Attachment #692412 -
Flags: review?(blassey.bugs)
| Assignee | ||
Comment 8•13 years ago
|
||
It turns out we didn't actually have the fullscreen surface displayed, which is why Flash never gave up the lock (it waits on the surface). Attached patch fixes that, and I don't get a deadlock.
Updated•13 years ago
|
Attachment #692412 -
Flags: review?(blassey.bugs) → review+
| Assignee | ||
Comment 9•13 years ago
|
||
Comment 10•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 20
Comment 11•13 years ago
|
||
Firefox 20.0a1 (2012-11-19)
Device: Galaxy Nexus/ Galaxy Note
OS: Android 4.1.1/ 4.0.4
This is not reproducible on latest Nightly following steps from description. Marking bug as VERIFIED FIXED.
Status: RESOLVED → VERIFIED
status-firefox20:
--- → verified
Updated•13 years ago
|
Status: VERIFIED → REOPENED
status-firefox21:
--- → fixed
status-firefox22:
--- → fixed
status-firefox23:
--- → fixed
status-firefox24:
--- → affected
Resolution: FIXED → ---
Updated•13 years ago
|
tracking-firefox23:
--- → ?
tracking-firefox24:
--- → ?
Updated•13 years ago
|
Severity: normal → critical
Comment 12•13 years ago
|
||
Snorp, what are your plans for FF23/24 now that this is backed out for bug 827407?
Comment 13•13 years ago
|
||
At this point, for FF23 we'll have to wontfix this and make a note in Known Issues.
relnote-firefox:
--- → ?
Comment 15•13 years ago
|
||
Next time, I think it would be a good idea to mention that this a mobile-only problem in the "Known Issue" notes. No need to worry users unnecessarily.
Comment 16•13 years ago
|
||
^ "Product: Firefox for Android"
>_>
<_<
Comment 17•13 years ago
|
||
needsinfo on :snorp to help with comment 12 given we are only left with two more mobile beta's for Fx24 as well.
Flags: needinfo?(snorp)
Comment 18•13 years ago
|
||
At this point, for FF23 we'll have to wontfix this and carry on the note in Known Issues
| Assignee | ||
Comment 19•13 years ago
|
||
The fix we had before was correct, IMHO, but I guess it caused some bad Flash behavior (crashing). I haven't had time to look at this or other Flash bugs but hope to soon.
Flags: needinfo?(snorp)
Comment 20•12 years ago
|
||
This happens to me several times a day. It is not just on YouTube, it is on all flash or non flash video. If I go to another tab and then go back it is frozen about 80% of the time and nothing you can do will fix it. It can sometimes be prevented by clicking on history clear and clear the cache, but even that does not always work! Just thought I would let you know.
Comment 21•12 years ago
|
||
(In reply to Lukas Blakk [:lsblakk] from comment #14)
> Noted in 'Known Issues'
This should be in 'Mobile' instand of 'Desktop'.
Comment 22•12 years ago
|
||
(In reply to Lukas Blakk [:lsblakk] from comment #14)
> Noted in 'Known Issues'
This bug is still incorrectly listed in the FF 27 desktop release notes, while it is not included in the current mobile release notes.
Flags: needinfo?(lsblakk)
Comment 23•12 years ago
|
||
It has happened for me in desktop Firefox 26 also. Not in every switching between fullscreen flash video and Firefox, but if happen to do it multiple times, then it tends to happen. Both in Youtube and in Twitch. Killing plugincontainer helps to unfreeze the Firefox.
Windows is Windows XP and it has happend with last couple of flash versions.
Comment 24•12 years ago
|
||
> The fix we had before was correct, IMHO, but I guess it caused some bad
> Flash behavior (crashing). I haven't had time to look at this or other Flash
> bugs but hope to soon.
Snorp's been all over Flash lately. Let's entertain the thought to see if Snorp is working on this?
Flags: needinfo?(snorp)
Comment 26•12 years ago
|
||
Why is this bug in the 27.0.1 desktop release notes at https://www.mozilla.org/en-US/firefox/27.0.1/releasenotes/ when it is an Android only bug?
Comment 27•12 years ago
|
||
(In reply to Pascal from comment #26)
> Why is this bug in the 27.0.1 desktop release notes at
> https://www.mozilla.org/en-US/firefox/27.0.1/releasenotes/ when it is an
> Android only bug?
We asked that question in comment #22. Still waiting for a release manager to make an adjustment.
Comment 28•12 years ago
|
||
This has been resolved in our database and in svn for trunk/stage/production notes and should not come back in future versions. http://viewvc.svn.mozilla.org/vc?view=revision&revision=125342
Flags: needinfo?(lsblakk)
Comment 29•9 years ago
|
||
clearing obsolete tracking flag due to Bug 1370184
This bug is very likely a resolved one.
tracking-fennec: 18+ → -
Comment 30•9 years ago
|
||
Yeah it is
Severity: critical → normal
Status: REOPENED → RESOLVED
Closed: 13 years ago → 9 years ago
Resolution: --- → FIXED
Updated•8 years ago
|
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•