Bug 809055 - Restore fullscreen plugins after document becomes active r=blassey