dom/plugins/base/nsPluginInstanceOwner.cpp
@@ -3383,6 +3383,8 @@ nsPluginInstanceOwner::UpdateDocumentActiveState(bool aIsActive)
   if (mInstance) {
     if (!mPluginDocumentActiveState)
       RemovePluginView();
+    else if (mPluginDocumentActiveState && mFullScreen)
+      AddPluginView();
 
     mInstance->NotifyOnScreen(mPluginDocumentActiveState);
 
